--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@jasonlamv-t/remark-toc-export",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
