--- a/.github/workflows/publish-to-npm.yaml
+++ b/.github/workflows/publish-to-npm.yaml
@@ -16,6 +16,6 @@ jobs:
           # Defaults to the user or organization that owns the workflow file
           scope: '@jasonlamv-t'
       - run: yarn
-      - run: yarn publish
+      - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
